--- a/app/templates/usuarios/carregar.html
+++ b/app/templates/usuarios/carregar.html
@@ -80,7 +80,7 @@
                            </ul>
                            <div class="row">
                               {{fields.numberField(6,"Valor","R$0,00","valor",label_style="color:black")}}
-                              {{fields.numberField(6,"Free","0","free",label_style="color:black")}}
+                              {{fields.numberField(6,"Free (nº de dias)","0","free",label_style="color:black")}}
                            </div>
                            {{fields.buttonSquare("CARREGAR","carregar()","margin-top:20px","loadingButton") }}
                            <!-- {{fields.buttonSquare("CARREGAR","loading = !loading","margin-top:20px","loading") }} -->
