--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -289,8 +289,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v1</li>
+              {% block extra %}{% endblock %}
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
